--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -14,8 +14,14 @@
     tools:showIn="@layout/activity_main"
     tools:context="strangers.hackmathon.org.strangersinspace.MainActivity">
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_gravity="center"
+        android:layout_height="wrap_content"
+        android:src="@drawable/logo" />
+
     <LinearLayout
-        android:paddingLeft="100dp"
+        android:layout_marginTop="150dp"
         android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -25,11 +31,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="@string/enter_code"
-            android:id="@+id/editText" />
+            android:layout_gravity="center"
+            android:id="@+id/editText"/>
         <Button
             android:id="@id/partyButton"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:text="@string/party"/>
     </LinearLayout>
 </RelativeLayout>
